# mosaic-ros2

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: deploy-ecr.yml
dockerfiles/: Dockerfile-humble-rosbag-simulator  Dockerfile-jazzy-rosbag-simulator  entrypoint.sh
include/mosaic-ros2/: mosaic_node.h  ros_logger.h
include/mosaic_ros2/: mosaic_node.h  ros2_auto_configurer.h  ros2_configurer.h  ros2_connector_configurer.h  ros_logger.h
include/mosaic_ros2/configurer/: ros2_a_dc_handler_configurer.h  ros2_a_mt_handler_configurer.h  ros2_a_parallel_dc_handler_configurer.h  ros2_auto_configurer.h
include/mosaic_ros2/geometry_msgs/: twist_connector.h  twist_stamped_connector.h
include/mosaic_ros2/logger/: ros_logger.h
include/mosaic_ros2/sensor_msgs/: image_connector.h  nav_sat_fix_connector.h  point_cloud2_connector.h
include/mosaic_ros2/sensor_msgs/util/: point_cloud_sender.h
launch/: mosaic_launch.py
mosaic-ros2-base/: CMakeLists.txt  package.xml
mosaic-ros2-base/include/mosaic-ros2-base/configurer/: ros2_a_dc_handler_configurer.hpp  ros2_a_mt_handler_configurer.hpp  ros2_a_multiple_dc_handler_configurer.hpp  ros2_a_parallel_dc_handler_configurer.h  ros2_auto_configurer.h  ros2_auto_configurer.hpp  ros2_connector_configurer.h  ros2_connector_configurer.hpp
mosaic-ros2-base/include/mosaic-ros2-base/logger/: ros_logger.hpp
mosaic-ros2-base/include/mosaic-ros2-base/node/: mosaic_node.hpp
mosaic-ros2-base/include/mosaic_ros2/configurer/: ros2_connector_configurer.h
mosaic-ros2-base/include/mosaic_ros2/sensor_msgs/: image_connector.h  nav_sat_fix_connector.h  point_cloud2_connector.h
mosaic-ros2-base/include/mosaic_ros2/sensor_msgs/util/: point_cloud2_sender.h
mosaic-ros2-base/launch/: mosaic_launch.py
mosaic-ros2-base/protobuf/: pc2_meta.proto  pc2_statistic.proto
mosaic-ros2-base/src/configurer/: ros2_auto_configurer.cpp  ros2_connector_configurer.cpp
mosaic-ros2-base/src/geometry_msgs/: twist_connector.cpp
mosaic-ros2-base/src/logger/: ros_logger.cpp
mosaic-ros2-base/src/node/: mosaic_node.cpp
mosaic-ros2-base/src/sensor_msgs/: image_connector.cpp  nav_sat_fix_connector.cpp  point_cloud2_connector.cpp
mosaic-ros2-base/src/sensor_msgs/util/: point_cloud2_sender.cpp
mosaic-ros2-bringup/: CMakeLists.txt  package.xml
mosaic-ros2-bringup/launch/: mosaic_bringup_launch.py
mosaic-ros2-bringup/src/: mosaic_ros2_main.cpp
mosaic-ros2-geometry/: CMakeLists.txt  package.xml
mosaic-ros2-geometry/include/mosaic-ros2-geometry/: converter.h  converter.hpp  register.h
mosaic-ros2-geometry/include/mosaic-ros2-geometry/connector/: pose_connector.h  pose_connector.hpp  twist_connector.h  twist_connector.hpp  twist_stamped_connector.h  twist_stamped_connector.hpp
mosaic-ros2-geometry/src/: converter.cpp  register.cpp
mosaic-ros2-geometry/src/connector/: pose_connector.cpp  twist_connector.cpp  twist_stamped_connector.cpp
mosaic-ros2-sensor/: CMakeLists.txt  package.xml
mosaic-ros2-sensor/include/mosaic-ros2-sensor/: register.h  register.hpp
mosaic-ros2-sensor/include/mosaic-ros2-sensor/connector/: image_connector.h  image_connector.hpp  nav_sat_fix_connector.h  nav_sat_fix_connector.hpp  point_cloud2_connector.h  point_cloud2_connector.hpp
mosaic-ros2-sensor/include/mosaic-ros2-sensor/util/: point_cloud2_sender.h  point_cloud2_sender.hpp  progressive_point_cloud2_sender.hpp  simple_point_cloud2_sender.hpp
mosaic-ros2-sensor/protobuf/: pcc_chunk.proto  pcc_meta.proto
mosaic-ros2-sensor/src/: register.cpp
mosaic-ros2-sensor/src/connector/: image_connector.cpp  nav_sat_fix_connector.cpp  point_cloud2_connector.cpp
mosaic-ros2-sensor/src/util/: clock_utils.cpp  clock_utils.hpp  point_cloud2_sender.cpp  progressive_point_cloud2_sender.cpp  simple_point_cloud2_sender.cpp  uuid_utils.cpp  uuid_utils.hpp
protobuf/: pc2_chunk.proto
src/: mosaic_node.cpp  mosaic_ros2_main.cpp  ros2_auto_configurer.cpp  ros_logger.cpp
src/configurer/: ros2_auto_configurer.cpp
src/geometry_msgs/: twist_connector.cpp  twist_stamped_connector.cpp
src/node/: mosaic_node.cpp
src/sensor_msgs/: image_connector.cpp  nav_sat_fix_connector.cpp  point_cloud2_connector.cpp
src/sensor_msgs/util/: point_cloud_sender.cpp
