<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mosaic-ros2-geometry</name>
    <version>1.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="brankein13@gm.gist.ac.kr">yhkim</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>mosaic-ros2-base</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
